--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 header {
     height: 30vh;
     border: 1px solid blueviolet;
-    margin: 10em;
+    margin: 5em 1em;
     display: flex;
     justify-content: space-around;
     align-items: center;
